[package]
name = "pori"
version = "0.1.0"
edition = "2024"

[dependencies]
parversion = { git = "https://github.com/lieso/parversion" }
log = "0.4"
simple-logging = "2.0.2"
tokio = { version = "1", features = ["full"] }
atty = "0.2"
clap = "3.0.0-beta.5"
async-trait = "0.1.88"
fern = "0.7.0"
chrono = "0.4.41"
serde_json = "1.0.140"
dotenv = "0.15.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
headless_chrome = "1.0.18"
